alteracoes no arquivo footer.html

--- a/public/view/footer.html
+++ b/public/view/footer.html
@@ -1,3 +1,5 @@
-<div>
-
+<div class="footer">
+    <div class="container">
+        <p class="text-muted">Developed by: João Marcos e Luma</p>
+    </div>
 </div>
