Estrutura inicial do front-end criado

--- a/public/view/navbar.html
+++ b/public/view/navbar.html
@@ -1,3 +1,26 @@
 <div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand centralizar-logo">
+                    <img class="logotipo" alt="Brand" src="./image/tutor-icon.png">
+                </a>
+            </div>
 
+            <div id="navbar" class="collapse navbar-collapse">
+                <div class="navbar-right">
+                    <button type="button" class="btn btn-success navbar-btn">Cadastrar/Login</button>
+                </div>
+                <div class="nav navbar-nav">
+                    <li><a>Home</a></li>
+                    <li><a>Disciplinas</a></li>
+                </div>
+            </div>
+        </div>
+    </nav>
 </div>
