navegabilidade do sistema com as views discipina e player

--- a/public/view/navbar.html
+++ b/public/view/navbar.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="nav navbar-nav">
                     <li><a href="" ng-click="navegarPara('home')">Home</a></li>
-                    <li><a href="" ng-click="navegarPara('disciplina')">Disciplinas</a></li>
+                    <li><a href="" ng-click="navegarPara('disciplinas')">Disciplinas</a></li>
                 </div>
             </div>
         </div>
