Ajuste de layout e breadcrumb adicionado

--- a/public/view/disciplina.html
+++ b/public/view/disciplina.html
@@ -1,4 +1,9 @@
 <div>
+    <ol class="breadcrumb">
+        <li><a href="#/disciplinas">Disciplinas</a></li>
+        <li class="active">{{nomeDisciplina}}</li>
+    </ol>
+
     <div class="page-header">
         <h1> {{nomeDisciplina}}</h1>
     </div>
