--- a/public/view/disciplinas.html
+++ b/public/view/disciplinas.html
@@ -1,4 +1,8 @@
 <div>
+    <ol class="breadcrumb">
+        <li class="active">Disciplinas</li>
+    </ol>
+
     <div class="page-header">
         <h1> Disciplinas</h1>
     </div>
