--- a/public/view/home.html
+++ b/public/view/home.html
@@ -1,4 +1,8 @@
 <div>
+    <ol class="breadcrumb">
+        <li class="active">Home</li>
+    </ol>
+
     <div class="page-header">
         <h1> Ultimos Vídeos</h1>
     </div>
