--- a/public/view/player.html
+++ b/public/view/player.html
@@ -1,4 +1,10 @@
 <div>
+    <ol class="breadcrumb">
+        <li><a href="#/disciplinas">Disciplinas</a></li>
+        <li><a href="#/disciplina">{{disciplina}}</a></li>
+        <li class="active">{{assunto}}</li>
+    </ol>
+
     <div class="page-header">
         <h1> {{disciplina}} | <small>{{assunto}}</small></h1>
     </div>
