Alteracoes em header

--- a/public/view/header.html
+++ b/public/view/header.html
@@ -1,4 +1,4 @@
-<div ng-controller="navbarController">
+<div ng-controller="headerController">
     <nav class="navbar navbar-default navbar-fixed-top ">
         <div class="container">
             <div class="navbar-header">
