--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,31 +1,111 @@
 body {
-  padding-top: 70px;
-  margin-bottom: 60px;
+    padding-top: 60px;
+    margin-bottom: 60px;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
 
-.centralizar-logo{
-  padding-top: 10px;
-  padding-bottom: 10px;
+.centralizar-logo {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .logotipo {
-  width: 35px;
-  height: 35px;
+    width: 35px;
+    height: 35px;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
 }
 
 .container .text-muted {
-  margin: 20px 0;
-  text-align: center;
+    margin: 20px 0;
+    text-align: center;
+}
+
+.drop-box {
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+    text-align: center;
+}
+
+.video {
+    max-height: 300px;
+}
+
+.dragover {
+    border: 5px dashed blue;
+}
+
+.show-hide {
+    transition: all linear 0.5s;
+}
+
+.show-hide.ng-hide {
+    opacity: 0;
+}
+
+.panel-thumbnail {
+    height: 200px;
+    text-align: center;
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+}
+
+.thumbnail-small {
+    height: 150px;
+}
+
+.row.vdivide [class*='col-']:not(:last-child):after {
+    background: #e0e0e0;
+    width: 1px;
+    content: "";
+    display:block;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    right: 0;
+    height: 280px;
+}
+
+/*
+ * Row with equal height columns
+ * --------------------------------------------------
+ */
+.row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display:         flex;
+}
+
+.sombra{
+    -webkit-box-shadow: 0px 1px 7px -1px rgba(52, 50, 50, 0.75);
+    -moz-box-shadow:    0px 1px 7px -1px rgba(52, 50, 50, 0.75);
+    box-shadow:         0px 1px 7px -1px rgba(52, 50, 50, 0.75);
+    opacity: 0.95;
+}
+
+.fade {
+    opacity: 1;
+}
+.fade.ng-enter,
+.fade.ng-leave {
+    transition: all 0.1s ease;
+}
+.fade.ng-enter {
+    opacity: 0;
+}
+.fade.ng-enter-active {
+    opacity: 0;
+}
+.fade.ng-leave-active {
+    opacity: 0;
 }
