--- a/public/view/home.html
+++ b/public/view/home.html
@@ -6,4 +6,9 @@
     <div class="page-header">
         <h1> Ultimos Vídeos</h1>
     </div>
+
+    <div ng-repeat="video in videos">
+        <img ng-src="{{video.caminhoThumbnail}}" ng-click="assistirVideo(video)"/>
+        Titulo: {{video.titulo}}
+    </div>
 </div>
