--- a/public/view/disciplina.html
+++ b/public/view/disciplina.html
@@ -1,4 +1,6 @@
 <div>
+    <div class="col-md-3" ng-repeat=""></div>
+
     <ol class="breadcrumb">
         <li><a href="#/disciplinas">Disciplinas</a></li>
         <li class="active">{{nomeDisciplina}}</li>
