--- a/public/view/disciplinas.html
+++ b/public/view/disciplinas.html
@@ -6,4 +6,8 @@
     <div class="page-header">
         <h1> Disciplinas</h1>
     </div>
+
+    <div class="" ng-repeat="disciplina in disciplinas">
+        <h3>{{disciplina.name}}</h3>
+    </div>
 </div>
