--- a/public/view/home.html
+++ b/public/view/home.html
@@ -7,8 +7,11 @@
         <h1> Ultimos Vídeos</h1>
     </div>
 
-    <div class="figura col-md-3" ng-repeat="video in videos">
-        <img ng-src="{{video.caminhoThumbnail}}" class="img-responsive img-thumbnail" ng-click="assistirVideo(video)" />
-         <p class="figura">{{video.titulo}}</p>
+    <div class="col-md-3" ng-repeat="video in videos">
+        <div class="thumbnail">
+            <img ng-src="{{video.caminhoThumbnail}}" class="img-responsive"
+                 ng-click="assistirVideo(video)"/>
+            <p>{{video.titulo}}</p>
+        </div>
     </div>
 </div>
