--- a/public/view/disciplina.html
+++ b/public/view/disciplina.html
@@ -1,17 +1,14 @@
 <div>
-    <div class="col-md-3" ng-repeat=""></div>
-
-    <ol class="breadcrumb">
+     <ol class="breadcrumb">
         <li><a href="#/disciplinas">Disciplinas</a></li>
-        <li class="active">{{nomeDisciplina}}</li>
+        <li class="active">{{disciplina.name}}</li>
     </ol>
 
     <div class="page-header">
-        <h1> {{nomeDisciplina}}</h1>
+        <h1> {{disciplina.name}}</h1>
     </div>
 
-    <div class="jumbotron">
-        {{disciplina}}<br>
-        {{assunto}}
+    <div class="" ng-repeat="assunto in assuntos">
+        <h3><a href="" >{{assunto.descricao}}</a></h3>
     </div>
 </div>
