erro na listagem de assuntos. N~ao consigo carregar os assundo que possui apenas o id da view

--- a/public/view/disciplina.html
+++ b/public/view/disciplina.html
@@ -9,4 +9,9 @@
     <div class="page-header">
         <h1> {{nomeDisciplina}}</h1>
     </div>
+
+    <div class="jumbotron">
+        {{disciplina}}<br>
+        {{assunto}}
+    </div>
 </div>
