--- a/public/view/disciplinas.html
+++ b/public/view/disciplinas.html
@@ -8,6 +8,6 @@
     </div>
 
     <div class="" ng-repeat="disciplina in disciplinas">
-        <h3>{{disciplina.name}}</h3>
+        <h3><a href="" ng-click="acessarDisciplina(disciplina)">{{disciplina.name}}</a></h3>
     </div>
 </div>
