Implementacao nos metodos de execulcao de videos da pagina inicial. ESTA INCOMPLETO.

--- a/public/view/footer.html
+++ b/public/view/footer.html
@@ -1,5 +1,6 @@
 <div class="footer ">
     <div class="container">
-        <p class="text-muted">Developed by: João Marcos e Luma</p>
+        <p class="text-muted">Developed by: João Marcos B. Ribeio</p><br>
+        <p class="text-muted">Gustavo Yoshio Maruyama</p>
     </div>
 </div>
